@@ -38,12 +38,7 @@ VERSION1: {
 
    ok -e 'foobar';
 
-   {
-      my $warned = 0;
-      local $SIG{__WARN__} = sub{$warned = 1};
-      $dm->prepare_deploy;
-      ok( $warned, 'prepare_deploy warns if you run it twice' );
-   }
+   dies_ok {$dm->prepare_deploy} 'prepare_deploy dies if you run it twice' ;
 
    ok(
       -f catfile(qw( t sql SQLite deploy 1.0 001-auto.sql )),
@@ -214,16 +209,14 @@ VERSION3: {
      to_version => $version,
      version_set => ['2.0', $version]
    });
-   {
-      my $warned = 0;
-      local $SIG{__WARN__} = sub{$warned = 1};
+   dies_ok {
       $dm->prepare_upgrade({
         from_version => '2.0',
         to_version => $version,
         version_set => ['2.0', $version]
       });
-      ok( $warned, 'prepare_upgrade warns if you clobber an existing upgrade file' );
-   }
+      }
+   'prepare_upgrade dies if you clobber an existing upgrade file' ;
    ok(
       -f catfile(qw( t sql SQLite upgrade 1.0-2.0 001-auto.sql )),
       '2.0-3.0 diff gets generated properly'
